--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <title>Publications | Musfiqur Rahman</title>
+  <meta name="description" content="Publications and scholarly presentations of Musfiqur Rahman, PhD researcher at Villanova University, focused on AI/ML for stormwater and green infrastructure performance.">
   <link rel="stylesheet" href="style.css">
+  <style>
+    .pub-wrap { margin-top: 18px; }
+    .pub-card {
+      border: 1px solid #e8e8e8;
+      border-radius: 12px;
+      padding: 14px 16px;
+      background: #ffffff;
+      margin: 12px 0;
+    }
+    .pub-title { font-weight: 800; color: #003366; margin: 0 0 6px 0; }
+    .pub-meta { margin: 0; color: #444; line-height: 1.6; }
+    .badge {
+      display: inline-block;
+      font-size: 0.85em;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid #cfe2ff;
+      background: #eaf2ff;
+      color: #003366;
+      font-weight: 700;
+      margin-left: 8px;
+      vertical-align: middle;
+    }
+    .btn-row { margin-top: 12px; display: flex; flex-wrap: wrap; gap: 10px; }
+    .btn {
+      display: inline-block;
+      padding: 10px 14px;
+      border-radius: 10px;
+      border: 1px solid #cfe2ff;
+      background: #eaf2ff;
+      color: #003366;
+      font-weight: 800;
+      text-decoration: none;
+    }
+    .btn:hover { background: #dcebff; }
+    .muted { color: #666; line-height: 1.7; }
+    .section-title { margin-top: 26px; }
+    ul.clean { margin-top: 10px; line-height: 1.7; }
+  </style>
 </head>
 <body>
 
@@ -22,16 +62,118 @@
 
 <h1>Publications</h1>
 
-<h2>Journal Articles</h2>
-<ul>
-  <li>(In preparation) Machine Learning–Based Forecasting of GSI Performance</li>
+<!-- NIW-style intro -->
+<p class="muted">
+My scholarly work supports the development of scalable, evidence-based decision tools for stormwater and green
+infrastructure systems. Across my publications and presentations, I focus on applied artificial intelligence and
+data-driven modeling approaches that integrate monitoring data, system design and environmental context to improve
+infrastructure performance forecasting, maintenance prioritization, and long-term resilience.
+</p>
+<p class="muted">
+Selected works below highlight contributions most aligned with my proposed U.S.-based endeavor in AI-enabled
+stormwater infrastructure performance assessment and risk-informed management.
+</p>
+
+<div class="btn-row">
+  <!-- Replace with your exact Scholar profile link if you want -->
+  <a class="btn" href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank">Full list on Google Scholar</a>
+</div>
+
+<h2 class="section-title">Selected (Most Relevant)</h2>
+
+<div class="pub-wrap">
+
+  <div class="pub-card">
+    <p class="pub-title">
+      Incorporating Artificial Intelligence (AI) into the Future of Stormwater Management
+      <span class="badge">Under Review</span>
+    </p>
+    <p class="pub-meta">
+      Rahman, M., Smith, V., Jiao, X., Kremer, P., Wadzuk, B., Arabi, S., &amp; Amur, A. (Under review).
+      Manuscript submitted to <em>Discover Applied Sciences</em>.
+    </p>
+  </div>
+
+  <div class="pub-card">
+    <p class="pub-title">
+      Advancing Green Stormwater Infrastructure Assessment through Machine Learning-Based Ponding Duration Prediction
+      <span class="badge">In Internal Review</span>
+    </p>
+    <p class="pub-meta">
+      Rahman, M., Smith, V., Wadzuk, B., Jiao, X., &amp; Kremer, P. (In internal review).
+    </p>
+  </div>
+
+  <div class="pub-card">
+    <p class="pub-title">
+      A SWOT Analysis to Assess the Potential for Green Infrastructure in the Global South
+      <span class="badge">Under Review</span>
+    </p>
+    <p class="pub-meta">
+      Bereded, B., Taylor, M., Rahman, M., Good, K., Ilemobade, A., Sample-Lord, K., &amp; Smith, V. (2025).
+      Submitted to <em>Scientific Reports</em> (Nature Portfolio), Urban Sustainability in the Global South Collection.
+    </p>
+  </div>
+
+</div>
+
+<h2 class="section-title">Peer-Reviewed Journal Articles</h2>
+<ul class="clean">
+  <li>
+    Hossain, S., Rahman, M., Rahman, R., Nusrat, F., &amp; Anisha, N. F. (2014).
+    Effects of climate change on river morphology in Bangladesh and a morphological assessment of Sitalakhya River.
+    <em>Journal of River Research Institute (RRI)</em>, 1, 1–13.
+  </li>
+  <li>
+    Saha, R., Haque, M. M., Rahman, M., &amp; Hossain, S. (2014).
+    Storm water management for urban areas of Bangladesh by analytical &amp; modelling approach: A case study of Chalna Municipality.
+    <em>International Journal of Surface and Groundwater Management</em>, 1(1), 1–10.
+  </li>
+  <li>
+    Setu, N. N., Hossain, S., Saha, R., &amp; Rahman, M. (2014).
+    Natural disasters impact on the water cycle, resources, quality, and human health.
+    <em>International Journal of Surface and Groundwater Management</em>, 1(1), 14–21.
+  </li>
 </ul>
 
-<h2>Conference Papers & Presentations</h2>
-<ul>
-  <li>AGU Fall Meeting — AI-enabled stormwater performance modeling</li>
+<h2 class="section-title">Selected Conference Papers &amp; Presentations</h2>
+<ul class="clean">
+  <li>
+    Rahman, M., Smith, V., Wadzuk, B., Kremer, P., Jiao, X., &amp; Wang, R. (2026).
+    <em>A Framework for Predicting GSI Maintenance Using AI-Driven Models</em>.
+    Accepted for presentation at the International Low Impact Development Conference (LID 2026), Jacksonville, FL, USA.
+  </li>
+  <li>
+    Rahman, M., Smith, V., Wadzuk, B., Jiao, X., Kremer, P., Amur, A., &amp; Wang, R. (2025).
+    Data-Driven Performance Forecasting for Green Stormwater Infrastructure.
+    AGU Fall Meeting 2025, New Orleans, LA, USA.
+  </li>
+  <li>
+    Rahman, M., Smith, V., Jiao, X., Wadzuk, B., Kremer, P., Amur, A., &amp; Wang, R. (2025).
+    Data-driven prediction of Blue-Green Infrastructure (BGI) performance.
+    13th Urban Drainage Modelling Conference (UDM), Innsbruck, Austria.
+  </li>
+  <li>
+    Rahman, M., Smith, V., Wadzuk, B., Jiao, X., Kremer, P., &amp; Amur, A. (2025).
+    Utilizing extensive monitoring data to evaluate GSI performance.
+    World Environmental &amp; Water Resources Congress (EWRI), Anchorage, Alaska, USA.
+  </li>
+  <li>
+    Rahman, M., Smith, V., Jiao, X., Wadzuk, B., Kremer, P. (2024).
+    Utilizing extensive monitoring data to evaluate Green Stormwater Infrastructure performance.
+    AGU Fall Meeting 2024, Washington, D.C., USA (Poster).
+  </li>
 </ul>
 
-<div class="footer">© Musfiqur Rahman</div>
+<p class="muted" style="margin-top:18px;">
+For a complete list (including additional proceedings and presentations), please see my Google Scholar profile.
+</p>
+
+<div class="btn-row">
+  <a class="btn" href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank">View Google Scholar</a>
+</div>
+
+<div class="footer">© 2026 Musfiqur Rahman. All rights reserved.</div>
+
 </body>
 </html>
