--- a/publications.html
+++ b/publications.html
@@ -70,8 +70,7 @@ data-driven modeling approaches that integrate monitoring data, system design an
 infrastructure performance forecasting, maintenance prioritization, and long-term resilience.
 </p>
 <p class="muted">
-Selected works below highlight contributions most aligned with my proposed U.S.-based endeavor in AI-enabled
-stormwater infrastructure performance assessment and risk-informed management.
+The publications listed below demonstrate research contributions directly aligned with my U.S.-based work in AI-enabled stormwater infrastructure performance assessment and risk-informed decision-making.
 </p>
 
 <div class="btn-row">
