--- a/membership.html
+++ b/membership.html
@@ -28,6 +28,15 @@
       margin-bottom: 15px;
     }
 
+    .membership-card a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    .membership-card a:hover h3 {
+      text-decoration: underline;
+    }
+
     .membership-card h3 {
       margin: 10px 0 5px;
       font-size: 18px;
@@ -60,27 +69,40 @@
 
 <div class="membership-container">
 
+  <!-- ASCE -->
   <div class="membership-card">
-    <img src="images/asce.png" alt="ASCE Logo">
-    <h3>American Society of Civil Engineers (ASCE)</h3>
+    <a href="https://www.asce.org" target="_blank" rel="noopener noreferrer">
+      <img src="images/asce.png" alt="ASCE Logo">
+      <h3>American Society of Civil Engineers (ASCE)</h3>
+    </a>
     <p>Student Member</p>
   </div>
 
+  <!-- AWWA -->
   <div class="membership-card">
-    <img src="images/awwa.png" alt="AWWA Logo">
-    <h3>American Water Works Association (AWWA)</h3>
+    <a href="https://www.awwa.org" target="_blank" rel="noopener noreferrer">
+      <img src="images/awwa.png" alt="AWWA Logo">
+      <h3>American Water Works Association (AWWA)</h3>
+    </a>
     <p>Student Member</p>
   </div>
 
+  <!-- EWRI -->
   <div class="membership-card">
-    <img src="images/ewri.png" alt="EWRI Logo">
-    <h3>Environmental & Water Resources Institute (EWRI)</h3>
+    <a href="https://www.asce.org/communities-institutes/environmental-and-water-resources-institute-ewri"
+       target="_blank" rel="noopener noreferrer">
+      <img src="images/ewri.png" alt="EWRI Logo">
+      <h3>Environmental & Water Resources Institute (EWRI)</h3>
+    </a>
     <p>Student Member</p>
   </div>
 
+  <!-- AGU -->
   <div class="membership-card">
-    <img src="images/agu.png" alt="AGU Logo">
-    <h3>American Geophysical Union (AGU)</h3>
+    <a href="https://www.agu.org" target="_blank" rel="noopener noreferrer">
+      <img src="images/agu.png" alt="AGU Logo">
+      <h3>American Geophysical Union (AGU)</h3>
+    </a>
     <p>Student Member</p>
   </div>
 
