--- a/certifications.html
+++ b/certifications.html
@@ -4,7 +4,36 @@
   <meta charset="UTF-8">
   <title>Certifications | Musfiqur Rahman</title>
   <link rel="stylesheet" href="style.css">
+
+  <style>
+    .cert-container {
+      max-width: 900px;
+      margin: 40px auto;
+    }
+
+    .cert-section {
+      margin-bottom: 35px;
+    }
+
+    .cert-section h2 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+
+    .cert-section ul {
+      list-style-type: disc;
+      padding-left: 25px;
+    }
+
+    .cert-section li {
+      margin-bottom: 8px;
+      font-size: 16px;
+    }
+  </style>
 </head>
+
 <body>
 
 <header>
@@ -20,14 +49,53 @@
   </nav>
 </header>
 
-<h1>Certifications & Training</h1>
+<h1 style="text-align:center;">Certifications & Specialized Training</h1>
 
-<ul>
-  <li>Advanced Machine Learning (Graduate level, Villanova University)</li>
-  <li>Python for Data Science & Machine Learning</li>
-  <li>Hydrologic & Stormwater Modeling (SWMM)</li>
-</ul>
+<div class="cert-container">
+
+  <!-- Core Technical Training -->
+  <div class="cert-section">
+    <h2>Data Science & Machine Learning</h2>
+    <ul>
+      <li><strong>Advanced Machine Learning</strong> — Graduate-level coursework, Villanova University</li>
+      <li><strong>Data Science with Python (Beginner to Advanced)</strong> — NOAMI</li>
+      <li><strong>Python for Data Science and Machine Learning</strong></li>
+    </ul>
+  </div>
+
+  <!-- Hydrology / Stormwater -->
+  <div class="cert-section">
+    <h2>Hydrologic, Stormwater & Flood Modeling</h2>
+    <ul>
+      <li><strong>Hydrologic and Stormwater Modeling (EPA SWMM)</strong></li>
+      <li><strong>Integrated Urban Flood Modeling (MIKE+ Urban Flood)</strong> — DHI</li>
+      <li><strong>Urban Drainage Modeling (MIKE+ CS / MIKE 1D)</strong> — DHI</li>
+      <li><strong>Water Distribution Network Modeling (MIKE+ WD)</strong> — DHI</li>
+    </ul>
+  </div>
+
+  <!-- Environmental / GIS -->
+  <div class="cert-section">
+    <h2>Environmental Modeling & GIS</h2>
+    <ul>
+      <li><strong>AERMOD Air Quality Dispersion Modeling</strong> — Lakes Environmental</li>
+      <li><strong>D-Emissions Modeling (Source-Based Emissions Assessment)</strong> — Deltares</li>
+      <li><strong>Advanced ArcGIS Training</strong> — Institute of Water Modelling (IWM), Dhaka</li>
+    </ul>
+  </div>
+
+  <!-- Professional Skills -->
+  <div class="cert-section">
+    <h2>Professional Development</h2>
+    <ul>
+      <li><strong>Business Communication</strong> — British Council</li>
+      <li><strong>Introduction to Modeling Tools (Theoretical Training)</strong> — Institute of Water Modelling (IWM)</li>
+    </ul>
+  </div>
+
+</div>
 
 <div class="footer">© Musfiqur Rahman</div>
+
 </body>
 </html>
